--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test-async": "jest --detectOpenHandles",
     "db:build": "node ./seed.js"
   },
   "author": "dyazdani",
