--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "jest",
     "test-seq": "jest /__tests__ --runInBand",
     "test-async": "jest --detectOpenHandles",
-    "db:build": "node ./seed/index.js"
+    "db:build": "node ./seed/index.js",
+    "start:dev": "nodemon ./app.js",
+    "start": "node ./app.js"
   },
   "author": "dyazdani",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "pg": "^8.11.3"
