--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "test-seq": "jest /__tests__ --runInBand",
     "test-async": "jest --detectOpenHandles",
-    "db:build": "node ./seed/index.js"
+    "db:build": "node ./db/seed/index.js"
   },
   "author": "dyazdani",
   "license": "ISC",
