--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "dyazdani",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "pg": "^8.11.3"
