--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "test-seq": "jest /__tests__ --runInBand",
     "test-async": "jest --detectOpenHandles",
-    "db:build": "node ./seed/index.js"
+    "db:build": "node ./seed/index.js",
+    "start:dev": "nodemon ./app.js",
+    "start": "node ./app.js"
   },
   "author": "dyazdani",
   "license": "ISC",
