--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.6.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "pg": "^8.11.3"
