--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
-    "pg": "^8.11.3"
-  }
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "keywords": []
 }
