--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "concurrently": "^8.2.1",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
