--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "ts-loader": "^9.4.4",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "express": "^4.18.2",
