--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test-seq": "jest /__tests__ --runInBand",
     "test-async": "jest --detectOpenHandles",
     "db:build": "node ./db/seed/index.js",
-    "start:dev": "nodemon ./start.js",
-    "start": "node ./start.js"
+    "start": "node ./start.js",
+    "build:dev": "tsc --watch --preserveWatchOutput",
+    "start:dev": "nodemon dist/index.js",
+    "dev": "concurrently 'npm run build:dev' 'npm run start:dev'"
   },
   "author": "dyazdani",
   "license": "ISC",
