--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:build": "node ./db/seed/index.js",
     "start": "node ./start.js",
     "build:dev": "tsc --watch --preserveWatchOutput",
-    "start:dev": "nodemon dist/index.js",
+    "start:dev": "nodemon dist/index.js & webpack -w",
     "dev": "concurrently 'npm run build:dev' 'npm run start:dev'"
   },
   "author": "dyazdani",
