--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "test-seq": "jest /__tests__ --runInBand",
     "test-async": "jest --detectOpenHandles",
     "db:build": "node ./db/seed/index.js",
-    "start": "node ./start.js",
     "build:dev": "tsc --watch --preserveWatchOutput",
     "start:dev": "nodemon dist/index.js & webpack -w",
-    "dev": "concurrently 'npm run build:dev' 'npm run start:dev'"
+    "dev": "concurrently 'npm run build:dev' 'npm run start:dev'",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "author": "dyazdani",
   "license": "ISC",
