--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "test": "jest",
     "test-seq": "jest /__tests__ --runInBand",
     "test-async": "jest --detectOpenHandles",
-    "db:build": "npm run build && node ./dist/db/seed.js",
+    "db:build": "npm run build && node dist/db/seed/index.js --resolveJsonModule",
     "build:dev": "tsc --watch --preserveWatchOutput",
     "start:dev": "nodemon dist/index.js & webpack -w",
     "dev": "concurrently 'npm run build:dev' 'npm run start:dev'",
-    "build": "tsc",
+    "build": "tsc --resolveJsonModule",
     "start": "node dist/index.js"
   },
   "author": "dyazdani",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.6.3",
+    "@types/node": "^20.7.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "concurrently": "^8.2.1",
