--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,11 +18,6 @@ jobs:
       postgres:
         image: postgres
 
-        env:
-          POSTGRES_USER: localUser
-          POSTGRES_PASSWORD: localPassword
-          POSTGRES_DB: test
-
         ports:
           - 5432:5432
 
@@ -60,4 +55,4 @@ jobs:
         run: npm run build --if-present
 
       - name: Run tests
-        run: npm run test
+        run: npm run test -- --env NODE_ENV=test
