--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
